# cccrypt

./: .gitignore  README.md  cccrypt.sln  cccrypt.vcxproj  cccrypt.vcxproj.filters  meson.build
src/: CCData.cpp  CCData.hpp  cccrypt.cpp
